--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div>
     <div class="about push" id="about">
       <div class="embed embed-24by10">
-        <img class="embed-item" src="images/shrbs.jpg" alt="">
+        <img class="embed-item" src="images/shrubs.jpg" alt="">
       </div>
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
@@ -38,6 +38,7 @@
           <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
           <p class="mega push-0 max-length not-centered">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
+      </div>
     </div>
 
     <div>
@@ -52,7 +53,7 @@
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub 2.jpg">
+            <img class="img-flex push" src="images/shrub-2.jpg">
             <div class="gutter-1-4" id="shrubs-with-laurels">
               <h1 class="mega push-0">Shrubs with laurels</h1>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
