--- a/index.html
+++ b/index.html
@@ -11,26 +11,30 @@
 </head>
 <body>
 
+  <header role="banner">
+
   <div class="masthead">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
       <h1 class="push-0">Shrubbery, etc.</h1>
     </div>
-    <div class="nav">
-      <div class="wrapper gutter-1-2">
-        <ol class="mega list-group-inline push-0">
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">About</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">Shrubs</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">Prices</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">News</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">Contact</a></li>
+    <nav role="navigation">
+      <div class="nav">
+        <div class="wrapper gutter-1-2">
+          <ol class="mega list-group-inline push-0">
+            <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#about">About</a></li>
+            <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#shrubs">Shrubs</a></li>
+            <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#prices">Prices</a></li>
+            <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#news">News</a></li>
+            <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#contact">Contact</a></li>
+        </div>
       </div>
-    </div>
+    </nav>
   </div>
 
   <div>
     <div class="about push" id="about">
       <div class="embed embed-24by10">
-        <img class="embed-item" src="images/shrubs.jpg" alt="">
+        <img class="embed-item" src="images/shrubs.jpg" alt="Bright green shrubbery">
       </div>
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
@@ -40,9 +44,13 @@
         </div>
       </div>
     </div>
+  </div>
 
+  </header>
+
+  <main role="main">
     <div>
-      <div class="wrapper gutter-1-2">
+      <div class="wrapper gutter-1-2" id="shrubs">
         <h1 class="push-0 color-brand-dark">Products</h1>
         <p class="mega max-length not-centered">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
@@ -70,7 +78,7 @@
       </div>
     </div>
 
-    <div class="prices pad-t pad-b">
+    <div class="prices pad-t pad-b" id="prices">
       <div class="wrapper gutter-1-2">
         <h1 class="push-0 color-brand-dark">Prices</h1>
         <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
@@ -104,7 +112,7 @@
       </div>
     </div>
 
-    <div class="news pad-t pad-b">
+    <div class="news pad-t pad-b" id="news">
       <div class="wrapper gutter-1-2">
         <h1 class="push-0 color-brand-dark">News</h1>
         <p class="mega max-length not-centered">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
@@ -124,8 +132,9 @@
           </li>
         </ol>
       </div>
+    </div>
 
-    <div class="contact pad-t pad-b">
+    <div class="contact pad-t pad-b" id="contact">
       <div class="wrapper">
         <h1 class="push-0 color-brand-dark gutter-1-2">Contact</h1>
         <p class="mega max-length not-centered gutter-1-2">We want… a shrubbery!</p>
@@ -154,12 +163,15 @@
         </form>
       </div>
     </div>
+  </main>
 
-  <div class="footer pad-t-1-2 pad-b-1-2">
-    <div class="wrapper gutter-1-2">
-      <small class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</small>
+  <footer role="contentinfo">
+    <div class="footer pad-t-1-2 pad-b-1-2">
+      <div class="wrapper gutter-1-2">
+        <small class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</small>
+      </div>
     </div>
-  </div>
+  </footer>
 
 </body>
 </html>
