Change focus states and underliens

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Things and stuff and junk</title>
+  <title>Shrubbery</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -26,6 +26,7 @@
             <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#prices">Prices</a></li>
             <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#news">News</a></li>
             <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#contact">Contact</a></li>
+          </ol>
         </div>
       </div>
     </nav>
@@ -55,20 +56,21 @@
         <p class="mega max-length not-centered">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-1.jpg">
+            <img class="img-flex push" src="images/shrub-1.jpg" alt="Bright green grassy shrubbery">
             <div class="gutter-1-4" id="grassy-shrubs">
               <h1 class="mega push-0">Grassy shrubs</h1>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-2.jpg">
+            <img class="img-flex push" src="images/shrub-2.jpg" alt="Green shrubbery with laurels">
             <div class="gutter-1-4" id="shrubs-with-laurels">
               <h1 class="mega push-0">Shrubs with laurels</h1>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
+          </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-3.jpg">
+            <img class="img-flex push" src="images/shrub-3.jpg" alt="Green shrubs with two levels">
             <div class="gutter-1-4" id="two-level-shrub">
               <h1 class="mega push-0">Two-level shrubbery</h1>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
@@ -142,11 +144,11 @@
         <form class="grid" method="post" action="#">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <span class="push-1-8">Your name</span>
-            <input>
           </div>
+          <input required>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <span class="push-1-8">E-mail address</span>
-            <input>
+          </input>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <span class="push-1-8">Type of shrubbery</span>
