--- a/index.html
+++ b/index.html
@@ -146,9 +146,8 @@
             <span class="push-1-8">Your name</span>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <input required>
-              <span class="push-1-8">E-mail address</span>
-            </input>
+          <input>
+          <span class="push-1-8">E-mail address</span>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <span class="push-1-8">Type of shrubbery</span>
