--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="en-ca">
+  <meta charset="utf-8">
   <title>Shrubbery</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
@@ -39,7 +40,7 @@
       </div>
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
-          <h1 class="push-0">About</h1>
+          <h2 class="push-0">About</h2>
           <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
           <p class="mega push-0 max-length not-centered">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
@@ -52,27 +53,27 @@
   <main role="main">
     <div>
       <div class="wrapper gutter-1-2" id="shrubs">
-        <h1 class="push-0 color-brand-dark">Products</h1>
+        <h2 class="push-0 color-brand-dark">Products</h2>
         <p class="mega max-length not-centered">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-1.jpg" alt="Bright green grassy shrubbery">
+            <img class="img-flex push" src="images/shrub-1.jpg" alt="" aria-details="#grassy-shrubs">
             <div class="gutter-1-4" id="grassy-shrubs">
-              <h1 class="mega push-0">Grassy shrubs</h1>
+              <h3 class="mega push-0">Grassy shrubs</h3>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-2.jpg" alt="Green shrubbery with laurels">
+            <img class="img-flex push" src="images/shrub-2.jpg" alt="" aria-details="shrubs-with-laurels">
             <div class="gutter-1-4" id="shrubs-with-laurels">
-              <h1 class="mega push-0">Shrubs with laurels</h1>
+              <h3 class="mega push-0">Shrubs with laurels</h3>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-3.jpg" alt="Green shrubs with two levels">
+            <img class="img-flex push" src="images/shrub-3.jpg" alt="" aria-details="two-level-shrub">
             <div class="gutter-1-4" id="two-level-shrub">
-              <h1 class="mega push-0">Two-level shrubbery</h1>
+              <h3 class="mega push-0">Two-level shrubbery</h3>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
             </div>
           </li>
@@ -82,7 +83,7 @@
 
     <div class="prices pad-t pad-b" id="prices">
       <div class="wrapper gutter-1-2">
-        <h1 class="push-0 color-brand-dark">Prices</h1>
+        <h2 class="push-0 color-brand-dark">Prices</h2>
         <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
@@ -116,7 +117,7 @@
 
     <div class="news pad-t pad-b" id="news">
       <div class="wrapper gutter-1-2">
-        <h1 class="push-0 color-brand-dark">News</h1>
+        <h2 class="push-0 color-brand-dark">News</h2>
         <p class="mega max-length not-centered">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
 
         <ol class="list-group">
