Add th and thead elements

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   </header>
 
-  <main role="main" id="#main">
+  <main id="#main" role="main">
     <div>
       <section class="wrapper gutter-1-2" id="shrubs">
         <h2 class="push-0 color-brand-dark">Products</h2>
@@ -95,29 +95,30 @@
         <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
+          <caption>Types of shrubs</caption>
           <thead>
             <tr>
-              <th scope="col">&nbsp;</td>
-              <th scope="col">Small</td>
-              <th scope="col">Medium</td>
-              <th scope="col">Large</td>
+              <th scope="col">&nbsp;</th>
+              <th scope="col">Small</th>
+              <th scope="col">Medium</th>
+              <th scope="col">Large</th>
             </tr>
           </thead>
 
           <tr>
-            <th scope="row">Grassy shrubs</td>
+            <th scope="row">Grassy shrubs</th>
             <td>$10</td>
             <td>$20</td>
             <td>$30</td>
           </tr>
           <tr>
-            <th scope="row">Shrubs with laurels</td>
+            <th scope="row">Shrubs with laurels</th>
             <td>$40</td>
             <td>$70</td>
             <td>$100</td>
           </tr>
           <tr>
-            <th scope="row">Two-level shrubbery</td>
+            <th scope="row">Two-level shrubbery</th>
             <td>$50</td>
             <td>$70</td>
             <td>$90</td>
@@ -155,16 +156,16 @@
 
         <form class="grid" method="post" action="#">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <input>
-            <label class="push-1-8">Your name</label>
+            <input id="name">
+            <label class="push-1-8" for="name">Your name</label>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <input>
-            <label class="push-1-8">E-mail address</label>
+            <input id="email">
+            <label type="email" class="push-1-8" for="email">E-mail address</label>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <label class="push-1-8">Type of shrubbery</label>
-            <select>
+            <label class="push-1-8" for="shrubbery">Type of shrubbery</label>
+            <select id="shrubbery">
               <option>Two-level shrubbery</option>
               <option>Small shrubbery</option>
               <option>Shrubbery with laurels</option>
