--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   </header>
 
-  <main id="#main" role="main">
+  <main id="main" role="main">
     <div>
       <section class="wrapper gutter-1-2" id="shrubs">
         <h2 class="push-0 color-brand-dark">Products</h2>
@@ -160,8 +160,8 @@
             <label class="push-1-8" for="name">Your name</label>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <input id="email">
-            <label type="email" class="push-1-8" for="email">E-mail address</label>
+            <input type="" id="email" required>
+            <label class="push-1-8" for="email">E-mail address</label>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label class="push-1-8" for="shrubbery">Type of shrubbery</label>
