--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-2.jpg" alt="" aria-details="#shrubs-with-laurels">
-            <div class="gutter-1-4" id="shrubs-with-laurels">
+            <img class="img-flex push" src="images/shrub-2.jpg" alt="" aria-details="#shrubs-laurels">
+            <div class="gutter-1-4" id="shrubs-laurels">
               <h3 class="mega push-0">Shrubs with laurels</h3>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-3.jpg" alt="" aria-details="#two-level-shrub">
-            <div class="gutter-1-4" id="two-level-shrub">
+            <img class="img-flex push" src="images/shrub-3.jpg" alt="" aria-details="#level-shrub">
+            <div class="gutter-1-4" id="level-shrub">
               <h3 class="mega push-0">Two-level shrubbery</h3>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
             </div>
@@ -160,7 +160,7 @@
             <label class="push-1-8" for="name">Your name</label>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <input type="" id="email" required>
+            <input type="email" id="email" required>
             <label class="push-1-8" for="email">E-mail address</label>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
