--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-2.jpg" alt="" aria-details="#shrubs-laurels">
+            <img class="img-flex push pad-t" src="images/shrub-2.jpg" alt="" aria-details="#shrubs-laurels">
             <div class="gutter-1-4" id="shrubs-laurels">
               <h3 class="mega push-0">Shrubs with laurels</h3>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-3.jpg" alt="" aria-details="#level-shrub">
+            <img class="img-flex push pad-t" src="images/shrub-3.jpg" alt="" aria-details="#level-shrub">
             <div class="gutter-1-4" id="level-shrub">
               <h3 class="mega push-0">Two-level shrubbery</h3>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
