--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push pad-t" src="images/shrub-3.jpg" alt="" aria-details="#level-shrub">
-            <div class="gutter-1-4" id="level-shrub">
+            <div class="gutter-1-4 pad-b" id="level-shrub">
               <h3 class="mega push-0">Two-level shrubbery</h3>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
             </div>
@@ -95,7 +95,7 @@
         <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
-          <caption>Types of shrubs</caption>
+          <caption>Prices for small, medium and large shrubs.</caption>
           <thead>
             <tr>
               <th scope="col">&nbsp;</th>
