--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="prices pad-t pad-b">
       <section class="wrapper gutter-1-2" id="prices">
         <h2 class="push-0 color-brand-dark">Prices</h2>
-        <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
+        <span class="mega max-length not-centered push">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
           <caption>Prices for small, medium and large shrubs.</caption>
@@ -156,12 +156,12 @@
 
         <form class="grid" method="post" action="#">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <input id="name">
             <label class="push-1-8" for="name">Your name</label>
+            <input id="name">
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <input type="email" id="email" required>
             <label class="push-1-8" for="email">E-mail address</label>
+            <input type="email" id="email" required>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
             <label class="push-1-8" for="shrubbery">Type of shrubbery</label>
