Add padding to match screenshots

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <span class="mega max-length not-centered push">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
-          <caption>Prices for small, medium and large shrubs.</caption>
+          <caption class="pad-t">Prices for small, medium and large shrubs.</caption>
           <thead>
             <tr>
               <th scope="col">&nbsp;</th>
