Adjust max-length on pricing paragraph

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     <div>
       <section class="wrapper gutter-1-2" id="shrubs">
         <h2 class="push-0 color-brand-dark">Products</h2>
-        <p class="mega max-length not-centered">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
+        <p class="mega max-length not-centered push-0">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-1.jpg" alt="" aria-details="#grassy-shrubs">
+            <img class="img-flex push pad-t" src="images/shrub-1.jpg" alt="" aria-details="#grassy-shrubs">
             <div class="gutter-1-4" id="grassy-shrubs">
               <h3 class="mega push-0">Grassy shrubs</h3>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
@@ -92,7 +92,7 @@
     <div class="prices pad-t pad-b">
       <section class="wrapper gutter-1-2" id="prices">
         <h2 class="push-0 color-brand-dark">Prices</h2>
-        <span class="mega max-length not-centered push">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
+        <span class="mega not-centered push max-length">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
           <caption class="pad-t">Prices for small, medium and large shrubberies.</caption>
