Add bold classes to match screenshots

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="prices pad-t pad-b">
       <section class="wrapper gutter-1-2" id="prices">
         <h2 class="push-0 color-brand-dark">Prices</h2>
-        <span class="mega not-centered push max-length">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
+        <span class="mega not-centered push max-length bold">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
           <caption class="pad-t">Prices for small, medium and large shrubberies.</caption>
@@ -127,7 +127,7 @@
       </section>
     </div>
 
-    <section class="news pad-t pad-b" id="news">
+    <section class="news pad-t pad-b bold" id="news">
       <article class="wrapper gutter-1-2">
         <h2 class="push-0 color-brand-dark">News</h2>
         <p class="mega max-length not-centered">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
