Adjust classes on elements

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </article>
     </section>
 
-    <div class="contact pad-t pad-b" id="contact">
+    <div class="contact pad-t pad-b bold" id="contact">
       <div class="wrapper">
         <h2 class="push-0 color-brand-dark gutter-1-2">Contact</h2>
         <p class="mega max-length not-centered gutter-1-2">We want… a shrubbery!</p>
@@ -180,7 +180,7 @@
     </div>
   </main>
 
-  <footer role="contentinfo">
+  <footer class="bold" role="contentinfo">
     <div class="footer pad-t-1-2 pad-b-1-2">
       <div class="wrapper gutter-1-2">
         <small class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</small>
